# FieldFriends

./: .gitignore  AGENTS.md  README.md
.github/workflows/: HCL_AppScan_CodeSweep.yml  auto_merge.yml  cd.yml  ci.yml  code_scanning.yml  issue_bot.yml  test.yml
backend/: .dockerignore  .env.aws.example  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_users.py  0003_events_participants.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  events.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  event.py  event_participant.py  user.py
backend/app/repo/: __init__.py  event_repo.py  participant_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  event.py  user.py
backend/app/service/: __init__.py  auth_service.py  event_service.py
backend/tests/: conftest.py  test_api.py  test_services.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: NavBar.test.tsx  NavBar.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/pages/: CreateEventPage.tsx  EventDetailPage.tsx  EventListPage.test.tsx  EventListPage.tsx  LoginPage.test.tsx  LoginPage.tsx  MyEventsPage.tsx  SignupPage.test.tsx  (+1 more)
scripts/aws/: deploy-db.env.example  deploy-db.ps1  deploy.env.example  deploy.ps1
