[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldfriends-backend"
version = "0.1.0"
description = "FastAPI backend for FieldFriends"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
  "alembic>=1.13.1,<2.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=3.2.0,<4.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = """
--cov=app
--cov-report=term-missing
--cov-report=xml
"""
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
skip_empty = true
